Fix slap carousel spacing bug

--- a/app/assets/stylesheets/discover-page.css
+++ b/app/assets/stylesheets/discover-page.css
@@ -45,19 +45,15 @@
   height: 60px;
 }
 
-.square-slap-info p {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 .square-slap-name {
+  display: block;
+  width: 160px;
   font-size: 15px;
   color: #555555;
   text-overflow: ellipsis;
   margin: 0px;
   text-decoration: none;
-  white-space:nowrap;
+  white-space: nowrap;
   overflow: hidden;
 }
 
@@ -67,6 +63,8 @@
 }
 
 .square-slap-uploader {
+  display: block;
+  width: 160px;
   font-size: 12px;
   color: #888888;
   text-overflow: ellipsis;
